[package]
name = "slotmapd"
version = "1.0.10"  # Remember to grep and update version everywhere.
edition = "2021"
authors = ["Orson Peters <orsonpeters@gmail.com>", "Paris Douady <paris.douady@hotmail.fr>"]
description = "orlp/slotmap fork where serialization cycle doesn't change observable behavior"
license = "Zlib"
repository = "https://github.com/Uriopass/slotmapd"
readme = "README.md"
keywords = ["slotmap", "storage", "allocator", "arena", "reference"]
categories = ["data-structures", "memory-management", "caching"]

[features]
default = ["std"]
unstable = []
std = []

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
fxhash = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quickcheck = "1.0.3"
